Updating user's fields.
